--- a/app/observation.html
+++ b/app/observation.html
@@ -476,6 +476,9 @@ visualisation.
             - Wearing selt belt has a positive corelation with violating other traffic rules. 
         </p>
     </div>
+    <footer class="footer">
+        <p>Created by Group 5: Jiayu Li, Yifan Wang, Chaoxin Wu</p>
+    </footer>
 </body>
 
 </html>
